# MOvIT-Detect

./: .gitignore  README.md  kill_all.sh  start_all.sh  start_backend.sh  start_control.sh  start_embedded.sh  start_frontend.sh  update_all.sh  update_backend.sh  update_embedded.sh  update_frontend.sh
Movit-Humidity/: humiditySensor.cpp
Movit-Pi/: .config.json  .config.json.backup  CMakeLists.txt  Makefile  MakefilePI  component_common.mk  settings.txt  sonar-project.properties
Movit-Pi/output/: movit-pi
Movit-Pi/release/: movit-control  movit-pi
Movit-Pi/src/: Alarm.cpp  Alarm.h  BackSeatAngleTracker.cpp  BackSeatAngleTracker.h  ChairManager.cpp  ChairManager.h  DateTimeRTC.cpp  DateTimeRTC.h  DeviceManager.cpp  DeviceManager.h  FileManager.cpp  FileManager.h  FixedImu.cpp  FixedImu.h  ForcePlate.cpp  ForcePlate.h  ForceSensor.cpp  ForceSensor.h  HumiditySensor.cpp  HumiditySensor.h  I2Cdev.cpp  I2Cdev.h  Imu.cpp  Imu.h  MCP79410.cpp  MCP79410.h  MPU6050.cpp  MPU6050.h  Makefile  MobileImu.cpp  MobileImu.h  MosquittoBroker.cpp  MosquittoBroker.h  MotionSensor.cpp  MotionSensor.h  MovingAverage.h  NetworkManager.cpp  NetworkManager.h  PMW3901.cpp  Timer.h  (+26 more)
Movit-Pi/src/MosquittoBroker/: MosquittoBroker.cpp  MosquittoBroker.h
Movit-Pi/src/Sensors/: Alarm.cpp  BackSeatAngleTracker.cpp  BackSeatAngleTracker.h  DateTimeRTC.cpp  HumiditySensor.cpp  MotionSensor.h
Movit-Pi/src/Utilities/: FileManager.cpp  NetworkManager.h
Movit-Pi/src/lib/: I2Cdev.cpp  I2Cdev.h  MAX11611.cpp  MAX11611.h  MCP79410.cpp  MCP79410.h  MPU6050.h  PCA9536.cpp  PCA9536.h
Movit-Pi/src/lib/BCM2835/: bcm2835.c
Movit-Pi/src/lib/PMW3901/: PMW3901.cpp  PMW3901.h
Movit-Pi/src/lib/VL53L0X/: VL53L0X.cpp  VL53L0X.h
Movit-Pi/src/mosquitto_broker/: mosquitto_broker.cpp  mosquitto_broker.h
Movit-Pi/src/movit-control/: Makefile  MosquittoClient.cpp  MosquittoClient.h  Process.cpp  Process.h  ProcessControl.cpp  ProcessControl.h  main.cpp
Movit-Pi/src/movit-pi/: Alarm.cpp  Alarm.h  AngleFSM.cpp  AngleFSM.h  BackSeatAngleTracker.cpp  BackSeatAngleTracker.h  ChairManager.cpp  ChairManager.h  DataType.h  DateTimeRTC.cpp  DateTimeRTC.h  DeviceManager.cpp  DeviceManager.h  FileManager.cpp  FileManager.h  FixedImu.cpp  FixedImu.h  ForcePlate.cpp  ForcePlate.h  ForceSensor.cpp  ForceSensor.h  GlobalForcePlate.cpp  GlobalForcePlate.h  I2Cdev.cpp  I2Cdev.h  Imu.cpp  Imu.h  MAX11611.cpp  MAX11611.h  MCP79410.cpp  MCP79410.h  MPU6050.cpp  MPU6050.h  Makefile  MobileImu.cpp  MobileImu.h  MosquittoBroker.cpp  MosquittoBroker.h  MotionSensor.cpp  MotionSensor.h  (+26 more)
Movit-Pi/src/movit-pi/tests/: test-Alarm.cpp  test-IMU.cpp
bcm2835-1.58/: Makefile  config.status
bcm2835-1.58/doc/: Makefile
bcm2835-1.58/src/: Makefile  bcm2835.c
python/: AngleFSM.py  ChairState.py  NotificationFSM.py  PressureMat.py  README.md  SeatingFSM.py  TravelFSM.py  config.cfg  launcher.py  main.py  requirements.txt
python/fsm/: AngleFSM.py  ChairState.py  NotificationFSM.py  SeatingFSM.py  TravelFSM.py  config.json  fsm_main.py
python/sensors/: Alarm.py  FSR400PressureArray.py  IMUSeatAngle.py  MAX11611.py  MPU6050.py  MPU6050_improved.py  PCA9536.py  PMW3901.py  PressureMat.py  Travel.py  config.cfg  config.json  main.py
python/tests/: BaseBackendTest.py  test_ConfigEndpoint.py  test_LoginEndpoint.py
(+8 files in other folders)
